# ai_agents

./: 01_text_vs_json.py  02_snackorder.py  03_snack_constraints.py  README.md  ans5.txt  ans7.txt  ask_questions.py  file.py  ivan.code-workspace  main.py  pyproject.toml
studybuddy_agent/: .gitignore  agent.py  tools.py
