[project]
name = "ai_agents"
version = "0.1.0"
description = "Учебный проект с ИИ-агентом"
authors = [
    {name = "student"}
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "google-adk (>=2.4.0,<3.0.0)",
    "litellm (>=1.92.0,<2.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pip-system-certs (>=5.3,<6.0)",
    "orjson (>=3.11.9,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
